Change style, give margin bottom to container edit buttons to avoid overlapping the more button

--- a/src/pages/user-one-list/styles.css
+++ b/src/pages/user-one-list/styles.css
@@ -10,4 +10,5 @@
 .page-user-one-list-container-edit-buttons {
   gap: 3px;
   justify-content: flex-end;
+  margin-bottom: 15px;
 }
