--- a/src/pages/user-watchlist/styles.css
+++ b/src/pages/user-watchlist/styles.css
@@ -1,4 +1,5 @@
 .page-watchlist-container-edit-button {
   justify-content: flex-end;
   margin-top: 10px;
+  margin-bottom: 15px;
 }
